<resources>
    <string name="app_name">Ubademy</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="display_name">Nombre y apellido</string>
    <string name="place">Ubicación (ciudad y país)</string>
    <string name="interests">Intereses</string>
    <string name="select_interests">¿Qué te interesa aprender?</string>
    <string name="ok">Listo</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="edit">Editar</string>
    <string name="backward">Atrás</string>
    <string name="forward">Adelante</string>
    <string name="request_failed">No se pudo realizar la petición al servidor</string>
    <string name="invalid_credentials">Credenciales invalidas</string>
    <string name="email_already_used">El email indicado ya se encuentra registrado</string>
    <string name="account_created_text">Su cuenta se ha creado con éxito.\n\nPuede usar sus credenciales para ingresar al sistema.</string>
    <string name="return_to_login">Volver a login</string>
    <string name="about">Acerca de Ubademy</string>
    <string name="fi">Facultad de Ingeniería</string>
    <string name="uba">Universidad de Buenos Aires</string>
    <string name="matter">75:52 - Taller de Programación II</string>
    <string name="semester">2do cuatrimestre 2021</string>
    <string name="group">Grupo 10</string>
    <string name="home">Inicio</string>
    <string name="edit_profile">Mi perfil</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="changes_have_been_saved">Los cambios han sido guardados</string>
    <string name="greetings_format">¡Hola, %1$s!</string>
    <string name="should_have_value">Este campo es obligatorio</string>
    <string name="should_be_valid_email">Debe ser un email válido</string>
    <string name="should_be_valid_password">La contraseña debe tener por lo menos %1$d caracteres</string>
    <string name="my_courses">Mis cursos</string>
    <string name="teacher">Docente</string>
    <string name="collaborator">Colaborador</string>
    <string name="collaborators">Colaboradores</string>
    <string name="student">Estudiante</string>
    <string name="my_teacher_courses">Mis cursos (docente)</string>
    <string name="my_collaborator_courses">Mis cursos (colaborador)</string>
    <string name="my_student_courses">Mis cursos (estudiante)</string>
    <string name="add_course">Crear curso</string>
    <string name="search_course">Buscar curso</string>
    <string name="course">Curso</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="course_type">Tipo de curso</string>
    <string name="subscription">Suscripción</string>
    <string name="course_added">El curso se creó con éxito</string>
    <string name="all_f">Todas</string>
    <string name="all_m">Todos</string>
    <string name="select_multimedia">Seleccionar imágenes</string>
    <string name="multimedia_selected">Imágenes seleccionadas: %1$d</string>
    <string name="should_select_multimedia">Hay que seleccionar imágenes</string>
    <string name="unable_to_submit_multimedia">No se pudo subir los archivos multimedia</string>
    <string name="confirm_enrolling">¿Desea inscribirse al curso "%1$s"?</string>
    <string name="confirm_unenrolling">¿Desea desinscribirse del curso "%1$s"?</string>
    <string name="enroll_failed">No se pudo realizar la inscripción</string>
    <string name="enroll_succeeded">Inscripción exitosa</string>
    <string name="unenroll_failed">No se pudo realizar la desinscripción</string>
    <string name="time_limit_overdue">Ya pasó el límite de tiempo para desinscribirse</string>
    <string name="unenroll_succeeded">Desinscripción exitosa</string>
    <string name="there_is_no_courses">No se han encontrado cursos</string>
    <string name="there_is_no_more_courses">No se han encontrado más cursos</string>
    <string name="there_is_no_users">No se han encontrado usuarios</string>
    <string name="there_is_no_more_users">No se han encontrado más usuarios</string>
    <string name="unenroll">Desinscribirse</string>
    <string name="exam">Examen</string>
    <string name="exams">Exámenes</string>
    <string name="taken_exams">Exámenes rendidos</string>
    <string name="content">Contenido</string>
    <string name="students">Alumnos</string>
    <string name="unable_to_fetch_user">No se pudo traer información acerca del usuario</string>
    <string name="chat">Mensajes</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="balance">Saldo</string>
    <string name="price">Precio</string>
    <string name="enroll_unlimited">Acceso ilimitado a cursos de este nivel</string>
    <string name="always_available">Siempre disponible</string>
    <string name="adds_enrollments">Agrega %1$d inscripciones de este nivel</string>
    <string name="available_enrollments">Quedan %1$d inscripciones disponibles</string>
    <string name="inscriptions_left">Quedan inscripciones</string>
    <string name="plus_fee">(+GasFee)</string>
    <string name="wallet">Billetera</string>
    <string name="wallet_copied_to_clipboard">Billetera copiada al portapapeles</string>
    <string name="confirm_subscription">¿Desea comprar una suscripción %1$s?</string>
    <string name="insufficient_funds">No se pudo comprar la suscripción por falta de fondos</string>
    <string name="subscription_successful">¡Compraste una suscripción %1$s!</string>
    <string name="add_exam">Crear examen</string>
    <string name="state">Estado</string>
    <string name="published">Publicado</string>
    <string name="not_published">No publicado</string>
    <string name="answer">Respuesta</string>
    <string name="question">Pregunta</string>
    <string name="questions">Preguntas</string>
    <string name="create">Crear</string>
    <string name="create_published">Crear y publicar</string>
    <string name="type_question_here">Escribe una pregunta acá</string>
    <string name="type_answer_here">Escribe una respuesta acá</string>
    <string name="exam_should_have_questions">Un examen debe tener preguntas</string>
    <string name="exam_cant_have_empty_questions">No puede haber preguntas vacías</string>
    <string name="exam_added">El examen se creó con éxito</string>
    <string name="there_is_no_exams">No se han encontrado exámenes</string>
    <string name="there_is_no_more_exams">No se han encontrado más exámenes</string>
    <string name="there_is_no_taken_exams">No se han encontrado exámenes rendidos</string>
    <string name="there_is_no_more_taken_exams">No se han encontrado más exámenes rendidos</string>
    <string name="question_format">%1$d: %2$s</string>
    <string name="take_exam">Rendir examen</string>
    <string name="submit_exam">Enviar examen</string>
    <string name="pending">Pendiente</string>
    <string name="taken">Rendido</string>
    <string name="reviewed">Corregido</string>
    <string name="there_are_unanswered_questions">Hay preguntas sin responder aún</string>
    <string name="exam_submitted">El exámen ha sido enviado</string>
    <string name="submitted_by">Resuelto por</string>
    <string name="reviewed_by">Corregido por</string>
    <string name="grade">Nota</string>
    <string name="edit_exam">Editar examen</string>
    <string name="removing">Borrando…</string>
    <string name="save">Guardar</string>
    <string name="qualify">Calificar</string>
    <string name="save_and_publish">Guardar y publicar</string>
    <string name="exam_saved">El examen se guardó con éxito</string>
    <string name="review_exam">Revisar examen</string>
    <string name="feedback">Feedback</string>
    <string name="exam_qualified">El examen ha sido calificado con éxito</string>
    <string name="add_collaborator">Agregar colaborador</string>
    <string name="confirm_add_collaborator">¿Desea agregar %1$s como colaborador?</string>
    <string name="add_collaborator_succeeded">Se agregó %1$s como colaborador</string>
    <string name="user_is_creator">El usuario es creador del curso</string>
    <string name="user_is_collaborator">El usuario ya es colaborador del curso</string>
    <string name="user_is_student">El usuario ya es estudiante del curso</string>
    <string name="add_collaborator_failed">No se pudo agregar colaborador</string>
    <string name="subscription_unavailable">La suscripción actual no permite inscribirse a este curso</string>
    <string name="expired_session">Sesión expirada</string>
    <string name="user_blocked">Usuario blockeado</string>
    <string name="message_sent_for">Este mensaje fue enviado para</string>
    <string name="login_to_another_account_for_chat">Este usuario no corresponde con el que actualmente se encuentra logueado. Para poder seguir el chat, es necesario ingresar en la aplicación con la cuenta indicada.</string>
    <string name="WEB_DEVELOPMENT">Desarrollo web</string>
    <string name="COOKING">Cocina</string>
    <string name="WOODWORKING">Carpintería</string>
    <string name="MATHEMATICS">Matemáticas</string>
    <string name="YOGA">Yoga</string>
    <string name="GRAPHIC_DESIGN">Diseño gráfico</string>
    <string name="FREE">Gratuita</string>
    <string name="BASIC">Básica</string>
    <string name="FULL">Completa</string>
</resources>