<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/profileMenuGroup">
        <item
            android:id="@+id/editProfileFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/edit_profile" />
    </group>

    <group android:id="@+id/coursesMenuGroup">
        <item android:title="@string/my_courses">
            <menu>
                <item
                    android:icon="@drawable/ic_baseline_cast_for_education_24"
                    android:title="@string/teacher" />
                <item
                    android:icon="@drawable/ic_baseline_co_present_24"
                    android:title="@string/collaborator" />
                <item
                    android:icon="@drawable/ic_baseline_ondemand_video_24"
                    android:title="@string/student" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/aboutGroup">
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
    </group>

</menu>