<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="manageCourseViewModel"
            type="com.fiuba.ubademy.main.courses.teacher.managecourse.ManageCourseViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manageCourseConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_l"
            tools:context=".main.courses.teacher.managecourse.ManageCourseFragment">

            <Button
                android:id="@+id/contentManageCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionManageCourseLabel" />

            <Button
                android:id="@+id/examsManageCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_l"
                android:text="@string/exams"
                app:layout_constraintBaseline_toBaselineOf="@+id/contentManageCourseButton"
                app:layout_constraintStart_toEndOf="@+id/contentManageCourseButton" />

            <Button
                android:id="@+id/studentsManageCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/students"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentManageCourseButton" />

            <TextView
                android:id="@+id/descriptionManageCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@{manageCourseViewModel.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleManageCourseLabel"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/titleManageCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@{manageCourseViewModel.title}"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseTypeManageCourseCardView"
                tools:text="@string/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/courseTypeManageCourseCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_xs"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="@dimen/radius_s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/courseTypeManageCourseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_xs"
                    android:text="@{manageCourseViewModel.courseType}"
                    android:textAlignment="viewStart"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="@string/course_type" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>