<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewCourseViewModel"
            type="com.fiuba.ubademy.main.courses.student.viewcourse.ViewCourseViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewCourseConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_l"
            tools:context=".main.courses.student.viewcourse.ViewCourseFragment">

            <Button
                android:id="@+id/contentViewCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeViewCourseLayout" />

            <Button
                android:id="@+id/examsViewCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_l"
                android:text="@string/exams"
                app:layout_constraintBaseline_toBaselineOf="@+id/contentViewCourseButton"
                app:layout_constraintStart_toEndOf="@+id/contentViewCourseButton" />

            <Button
                android:id="@+id/unenrollViewCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/unenroll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentViewCourseButton" />

            <TextView
                android:id="@+id/descriptionViewCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@{viewCourseViewModel.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleViewCourseLabel"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/titleViewCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@{viewCourseViewModel.title}"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseTypeViewCourseCardView"
                tools:text="@string/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/courseTypeViewCourseCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_xs"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="@dimen/radius_s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/courseTypeViewCourseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_xs"
                    android:text="@{viewCourseViewModel.courseType}"
                    android:textAlignment="viewStart"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="@string/course_type" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/teacherViewCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textAlignment="viewStart"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/teacherViewCourseChip"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/teacherViewCourseChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:enabled="false"
                android:text="@{viewCourseViewModel.creatorDisplayName}"
                app:layout_constraintStart_toEndOf="@+id/teacherViewCourseLabel"
                app:layout_constraintTop_toBottomOf="@+id/descriptionViewCourseLabel"
                tools:text="@string/display_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/placeViewCourseLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teacherViewCourseChip">

                <ImageView
                    android:id="@+id/placeViewCourseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/place"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_place_24" />

                <TextView
                    android:id="@+id/placeViewCourseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingRight="@dimen/padding_l"
                    android:text="@{viewCourseViewModel.placeName}"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/placeViewCourseIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="City, Country" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>